Important cahnges applied over portfolio UI. Added auto menu close, fixed carousel overlapping, added icons packs

--- a/css/bgterminal.css
+++ b/css/bgterminal.css
@@ -46,13 +46,12 @@
 
 #containerRow {
 	position: fixed;
-	left: 4rem;
+	left: 2.5rem;
 	z-index: -1;
 	top: 4.5rem;
 }
 
 .bgterminal {
-	/*position: fixed;*/
 	top: 12vh;
 	bottom: 0;
 	right: 0;
